fix: Change colol to contrast

--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,6 +1,6 @@
 .spinnerBox {
     width: 100%;
-    height: 100vh;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
